2020-04-25  Dirk Eddelbuettel  <edd@debian.org>

	* inst/include/Rcpp/sugar/functions/sample.h: Replace R_alloc() with
	a standard vector allocation to reduce memory consumption in sample

2020-04-16  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Roll minor version
        * inst/include/Rcpp/config.h: Idem

2020-04-15  Kevin Ushey  <kevinushey@gmail.com>

	* inst/include/Rcpp/String.h: Avoid 'debug' namespace collisions
	* inst/include/Rcpp/macros/debug.h: Idem
	* inst/include/Rcpp/macros/macros.h: Idem

2020-04-15  Uwe Korn  <mail@uwekorn.com>

	* inst/include/Rcpp/DataFrame.h: Explicit call to scalar std::abs

2020-04-11  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Roll minor version
        * inst/include/Rcpp/config.h: Idem

2020-04-10  Kevin Ushey  <kevinushey@gmail.com>

	* inst/include/Rcpp/macros/macros.h: Safer definition of short_file_name
	* inst/include/Rcpp/String.h: Idem
	* inst/include/Rcpp/macros/debug.h: Idem
	* src/api.cpp: Idem

2020-04-10  Dirk Eddelbuettel  <edd@debian.org>

	* inst/tinytest/test_exceptions.R: Skip parts of file if on Solaris

2020-04-02  Dirk Eddelbuettel  <edd@debian.org>

	* inst/NEWS.rd: Mark as patch release 1.0.4.6

	* inst/tinytest/test_exceptions.R: If running skip remainder of file
	on Windows to not trigger failed test

2020-04-01  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Roll minor version
        * inst/include/Rcpp/config.h: Idem

2020-03-31  Dirk Eddelbuettel  <edd@debian.org>

	* docker/ci-dev/Dockerfile: Also install the 'codetools' package

2020-03-31 Kevin Ushey  <kevin@rstudio.com>

	* R/Attributes.R: Fix for sourceCpp() on Windows w/R-devel

2020-03-28  Dirk Eddelbuettel  <edd@debian.org>

	* inst/examples/RcppGibbs/RcppGibbs_Updated.R: Updated example

2020-03-24  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Roll minor version
        * inst/include/Rcpp/config.h: Idem
