@@ -3,6 +3,9 @@
 	* inst/include/Rcpp/sugar/functions/sample.h: Replace R_alloc() with
 	a standard vector allocation to reduce memory consumption in sample
 
+	* docker/ci/Dockerfile: Update for R 4.0.0 (with a temporary
+	diversion to rocker/r-base:4.0.0, and all-source installations)
+
 2020-04-16  Dirk Eddelbuettel  <edd@debian.org>
 
 	* DESCRIPTION (Version, Date): Roll minor version
